--- a/FinalProject.ioc
+++ b/FinalProject.ioc
@@ -1,66 +1,77 @@
 #MicroXplorer Configuration settings - do not modify
+ADC2.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_5
+ADC2.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,SamplingTimeOPAMP-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,Offset-0\#ChannelRegularConversion,NbrOfConversionFlag
+ADC2.NbrOfConversionFlag=1
+ADC2.Offset-0\#ChannelRegularConversion=0
+ADC2.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC2.Rank-0\#ChannelRegularConversion=1
+ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_601CYCLES_5
+ADC2.SamplingTimeOPAMP-0\#ChannelRegularConversion=ADC_SAMPLETIME_61CYCLES_5
 File.Version=6
 I2C1.IPParameters=Timing-I2C
 I2C1.Timing-I2C=0x2000090E
 KeepUserPlacement=false
 Mcu.Family=STM32F3
-Mcu.IP0=I2C1
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SPI1
-Mcu.IP4=SYS
-Mcu.IP5=TIM2
-Mcu.IP6=TIM3
-Mcu.IP7=USB
-Mcu.IPNb=8
+Mcu.IP0=ADC2
+Mcu.IP1=I2C1
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SPI1
+Mcu.IP5=SYS
+Mcu.IP6=TIM2
+Mcu.IP7=TIM3
+Mcu.IP8=USB
+Mcu.IPNb=9
 Mcu.Name=STM32F303V(B-C)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE2
 Mcu.Pin1=PE3
 Mcu.Pin10=PA6
 Mcu.Pin11=PA7
-Mcu.Pin12=PE8
-Mcu.Pin13=PE9
-Mcu.Pin14=PE10
-Mcu.Pin15=PE11
-Mcu.Pin16=PE12
-Mcu.Pin17=PE13
-Mcu.Pin18=PE14
-Mcu.Pin19=PE15
+Mcu.Pin12=PC4
+Mcu.Pin13=PE8
+Mcu.Pin14=PE9
+Mcu.Pin15=PE10
+Mcu.Pin16=PE11
+Mcu.Pin17=PE12
+Mcu.Pin18=PE13
+Mcu.Pin19=PE14
 Mcu.Pin2=PE4
-Mcu.Pin20=PD8
-Mcu.Pin21=PD9
-Mcu.Pin22=PD10
-Mcu.Pin23=PD11
-Mcu.Pin24=PD12
-Mcu.Pin25=PD13
-Mcu.Pin26=PD14
-Mcu.Pin27=PD15
-Mcu.Pin28=PA11
-Mcu.Pin29=PA12
+Mcu.Pin20=PE15
+Mcu.Pin21=PD8
+Mcu.Pin22=PD9
+Mcu.Pin23=PD10
+Mcu.Pin24=PD11
+Mcu.Pin25=PD12
+Mcu.Pin26=PD13
+Mcu.Pin27=PD14
+Mcu.Pin28=PD15
+Mcu.Pin29=PA11
 Mcu.Pin3=PE5
-Mcu.Pin30=PA13
-Mcu.Pin31=PA14
-Mcu.Pin32=PB3
-Mcu.Pin33=PB6
-Mcu.Pin34=PB7
-Mcu.Pin35=PE0
-Mcu.Pin36=PE1
-Mcu.Pin37=VP_SYS_VS_Systick
-Mcu.Pin38=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin39=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin30=PA12
+Mcu.Pin31=PA13
+Mcu.Pin32=PA14
+Mcu.Pin33=PB3
+Mcu.Pin34=PB6
+Mcu.Pin35=PB7
+Mcu.Pin36=PE0
+Mcu.Pin37=PE1
+Mcu.Pin38=VP_SYS_VS_Systick
+Mcu.Pin39=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin4=PC14-OSC32_IN
+Mcu.Pin40=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin5=PC15-OSC32_OUT
 Mcu.Pin6=PF0-OSC_IN
 Mcu.Pin7=PF1-OSC_OUT
 Mcu.Pin8=PA0
 Mcu.Pin9=PA5
-Mcu.PinsNb=40
+Mcu.PinsNb=41
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F303VCTx
 MxCube.Version=6.1.1
 MxDb.Version=DB.6.0.10
+NVIC.ADC1_2_IRQn=true\:1\:0\:true\:false\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.ForceEnableDMAVector=true
@@ -135,6 +146,8 @@ PC15-OSC32_OUT.GPIOParameters=GPIO_Label
 PC15-OSC32_OUT.GPIO_Label=OSC32_OUT
 PC15-OSC32_OUT.Locked=true
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
+PC4.Mode=IN5-Single-Ended
+PC4.Signal=ADC2_IN5
 PD10.Locked=true
 PD10.Signal=GPIO_Output
 PD11.Locked=true
@@ -249,7 +262,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_USB_PCD_Init-USB-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_USB_PCD_Init-USB-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_ADC2_Init-ADC2-false-HAL-true
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
 RCC.AHBFreq_Value=72000000
