add forward to mario

--- a/FinalProject.ioc
+++ b/FinalProject.ioc
@@ -8,6 +8,7 @@ ADC2.Rank-0\#ChannelRegularConversion=1
 ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_601CYCLES_5
 ADC2.SamplingTimeOPAMP-0\#ChannelRegularConversion=ADC_SAMPLETIME_61CYCLES_5
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
 I2C1.IPParameters=Timing-I2C
 I2C1.Timing-I2C=0x2000090E
 KeepUserPlacement=false
@@ -24,48 +25,52 @@ Mcu.IP8=USB
 Mcu.IPNb=9
 Mcu.Name=STM32F303V(B-C)Tx
 Mcu.Package=LQFP100
-Mcu.Pin0=PE2
-Mcu.Pin1=PE3
-Mcu.Pin10=PA6
-Mcu.Pin11=PA7
-Mcu.Pin12=PC4
-Mcu.Pin13=PE8
-Mcu.Pin14=PE9
-Mcu.Pin15=PE10
-Mcu.Pin16=PE11
-Mcu.Pin17=PE12
-Mcu.Pin18=PE13
-Mcu.Pin19=PE14
-Mcu.Pin2=PE4
-Mcu.Pin20=PE15
-Mcu.Pin21=PD8
-Mcu.Pin22=PD9
-Mcu.Pin23=PD10
-Mcu.Pin24=PD11
-Mcu.Pin25=PD12
-Mcu.Pin26=PD13
-Mcu.Pin27=PD14
-Mcu.Pin28=PD15
-Mcu.Pin29=PA11
-Mcu.Pin3=PE5
-Mcu.Pin30=PA12
-Mcu.Pin31=PA13
-Mcu.Pin32=PA14
-Mcu.Pin33=PB3
-Mcu.Pin34=PB6
-Mcu.Pin35=PB7
-Mcu.Pin36=PE0
-Mcu.Pin37=PE1
-Mcu.Pin38=VP_SYS_VS_Systick
-Mcu.Pin39=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin4=PC14-OSC32_IN
-Mcu.Pin40=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin5=PC15-OSC32_OUT
-Mcu.Pin6=PF0-OSC_IN
-Mcu.Pin7=PF1-OSC_OUT
-Mcu.Pin8=PA0
-Mcu.Pin9=PA5
-Mcu.PinsNb=41
+Mcu.Pin0=PE3
+Mcu.Pin1=PE4
+Mcu.Pin10=PA7
+Mcu.Pin11=PC4
+Mcu.Pin12=PB0
+Mcu.Pin13=PB1
+Mcu.Pin14=PB2
+Mcu.Pin15=PE8
+Mcu.Pin16=PE9
+Mcu.Pin17=PE10
+Mcu.Pin18=PE11
+Mcu.Pin19=PE12
+Mcu.Pin2=PE5
+Mcu.Pin20=PE13
+Mcu.Pin21=PE14
+Mcu.Pin22=PE15
+Mcu.Pin23=PB10
+Mcu.Pin24=PB11
+Mcu.Pin25=PB12
+Mcu.Pin26=PB13
+Mcu.Pin27=PD8
+Mcu.Pin28=PD9
+Mcu.Pin29=PD10
+Mcu.Pin3=PC14-OSC32_IN
+Mcu.Pin30=PD11
+Mcu.Pin31=PD12
+Mcu.Pin32=PD13
+Mcu.Pin33=PD14
+Mcu.Pin34=PD15
+Mcu.Pin35=PA11
+Mcu.Pin36=PA12
+Mcu.Pin37=PA13
+Mcu.Pin38=PA14
+Mcu.Pin39=PB3
+Mcu.Pin4=PC15-OSC32_OUT
+Mcu.Pin40=PB6
+Mcu.Pin41=PB7
+Mcu.Pin42=VP_SYS_VS_Systick
+Mcu.Pin43=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin44=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin5=PF0-OSC_IN
+Mcu.Pin6=PF1-OSC_OUT
+Mcu.Pin7=PA0
+Mcu.Pin8=PA5
+Mcu.Pin9=PA6
+Mcu.PinsNb=45
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F303VCTx
@@ -74,6 +79,10 @@ MxDb.Version=DB.6.0.10
 NVIC.ADC1_2_IRQn=true\:1\:0\:true\:false\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false
+NVIC.EXTI0_IRQn=true\:1\:0\:true\:false\:true\:true\:true
+NVIC.EXTI1_IRQn=true\:1\:0\:true\:false\:true\:true\:true
+NVIC.EXTI2_TSC_IRQn=true\:1\:0\:true\:false\:true\:true\:true
+NVIC.EXTI3_IRQn=true\:1\:0\:true\:false\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:true\:false
@@ -124,10 +133,30 @@ PA7.GPIO_Label=SPI1_MISO [L3GD20_SDA/SDI/SDO]
 PA7.Locked=true
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
-PB3.GPIOParameters=GPIO_Label
-PB3.GPIO_Label=SWO
+PB0.GPIOParameters=GPIO_PuPd
+PB0.GPIO_PuPd=GPIO_PULLDOWN
+PB0.Locked=true
+PB0.Signal=GPXTI0
+PB1.GPIOParameters=GPIO_PuPd
+PB1.GPIO_PuPd=GPIO_PULLDOWN
+PB1.Locked=true
+PB1.Signal=GPXTI1
+PB10.Locked=true
+PB10.Signal=GPIO_Output
+PB11.Locked=true
+PB11.Signal=GPIO_Output
+PB12.Locked=true
+PB12.Signal=GPIO_Output
+PB13.Locked=true
+PB13.Signal=GPIO_Output
+PB2.GPIOParameters=GPIO_PuPd
+PB2.GPIO_PuPd=GPIO_PULLDOWN
+PB2.Locked=true
+PB2.Signal=GPXTI2
+PB3.GPIOParameters=GPIO_PuPd
+PB3.GPIO_PuPd=GPIO_PULLDOWN
 PB3.Locked=true
-PB3.Signal=SYS_JTDO-TRACESWO
+PB3.Signal=GPXTI3
 PB6.GPIOParameters=GPIO_Label
 PB6.GPIO_Label=I2C1_SCL [LSM303DLHC_SCL]
 PB6.Locked=true
@@ -164,16 +193,6 @@ PD8.Locked=true
 PD8.Signal=GPIO_Output
 PD9.Locked=true
 PD9.Signal=GPIO_Output
-PE0.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
-PE0.GPIO_Label=MEMS_INT1 [L3GD20_INT1]
-PE0.GPIO_ModeDefaultEXTI=GPIO_MODE_EVT_RISING
-PE0.Locked=true
-PE0.Signal=GPXTI0
-PE1.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
-PE1.GPIO_Label=MEMS_INT2 [L3GD20_DRDY/INT2]
-PE1.GPIO_ModeDefaultEXTI=GPIO_MODE_EVT_RISING
-PE1.Locked=true
-PE1.Signal=GPXTI1
 PE10.GPIOParameters=GPIO_Label
 PE10.GPIO_Label=LD5 [Orange Led]
 PE10.Locked=true
@@ -198,11 +217,6 @@ PE15.GPIOParameters=GPIO_Label
 PE15.GPIO_Label=LD6 [Green Led]
 PE15.Locked=true
 PE15.Signal=GPIO_Output
-PE2.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
-PE2.GPIO_Label=DRDY [LSM303DLHC_DRDY]
-PE2.GPIO_ModeDefaultEXTI=GPIO_MODE_EVT_RISING
-PE2.Locked=true
-PE2.Signal=GPXTI2
 PE3.GPIOParameters=GPIO_Label
 PE3.GPIO_Label=CS_I2C/SPI [L3GD20_CS_I2C/SPI]
 PE3.Locked=true
@@ -310,6 +324,8 @@ SH.GPXTI1.0=GPIO_EXTI1
 SH.GPXTI1.ConfNb=1
 SH.GPXTI2.0=GPIO_EXTI2
 SH.GPXTI2.ConfNb=1
+SH.GPXTI3.0=GPIO_EXTI3
+SH.GPXTI3.ConfNb=1
 SH.GPXTI4.0=GPIO_EXTI4
 SH.GPXTI4.ConfNb=1
 SH.GPXTI5.0=GPIO_EXTI5
