--- a/FinalProject.ioc
+++ b/FinalProject.ioc
@@ -20,55 +20,60 @@ Mcu.IP3=RCC
 Mcu.IP4=SPI1
 Mcu.IP5=SYS
 Mcu.IP6=TIM2
-Mcu.IP7=USB
-Mcu.IPNb=8
+Mcu.IP7=USART2
+Mcu.IP8=USB
+Mcu.IPNb=9
 Mcu.Name=STM32F303V(B-C)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE3
 Mcu.Pin1=PE4
-Mcu.Pin10=PA7
-Mcu.Pin11=PC4
-Mcu.Pin12=PB0
-Mcu.Pin13=PB1
-Mcu.Pin14=PB2
-Mcu.Pin15=PE8
-Mcu.Pin16=PE9
-Mcu.Pin17=PE10
-Mcu.Pin18=PE11
-Mcu.Pin19=PE12
+Mcu.Pin10=PA3
+Mcu.Pin11=PA5
+Mcu.Pin12=PA6
+Mcu.Pin13=PA7
+Mcu.Pin14=PC4
+Mcu.Pin15=PB0
+Mcu.Pin16=PB1
+Mcu.Pin17=PB2
+Mcu.Pin18=PE8
+Mcu.Pin19=PE9
 Mcu.Pin2=PE5
-Mcu.Pin20=PE13
-Mcu.Pin21=PE14
-Mcu.Pin22=PE15
-Mcu.Pin23=PB10
-Mcu.Pin24=PB11
-Mcu.Pin25=PB12
-Mcu.Pin26=PB13
-Mcu.Pin27=PD8
-Mcu.Pin28=PD9
-Mcu.Pin29=PD10
+Mcu.Pin20=PE10
+Mcu.Pin21=PE11
+Mcu.Pin22=PE12
+Mcu.Pin23=PE13
+Mcu.Pin24=PE14
+Mcu.Pin25=PE15
+Mcu.Pin26=PB10
+Mcu.Pin27=PB11
+Mcu.Pin28=PB12
+Mcu.Pin29=PB13
 Mcu.Pin3=PC14-OSC32_IN
-Mcu.Pin30=PD11
-Mcu.Pin31=PD12
-Mcu.Pin32=PD13
-Mcu.Pin33=PD14
-Mcu.Pin34=PD15
-Mcu.Pin35=PA11
-Mcu.Pin36=PA12
-Mcu.Pin37=PA13
-Mcu.Pin38=PA14
-Mcu.Pin39=PB3
+Mcu.Pin30=PD8
+Mcu.Pin31=PD9
+Mcu.Pin32=PD10
+Mcu.Pin33=PD11
+Mcu.Pin34=PD12
+Mcu.Pin35=PD13
+Mcu.Pin36=PD14
+Mcu.Pin37=PD15
+Mcu.Pin38=PA11
+Mcu.Pin39=PA12
 Mcu.Pin4=PC15-OSC32_OUT
-Mcu.Pin40=PB6
-Mcu.Pin41=PB7
-Mcu.Pin42=VP_SYS_VS_Systick
-Mcu.Pin43=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin40=PA13
+Mcu.Pin41=PA14
+Mcu.Pin42=PB3
+Mcu.Pin43=PB5
+Mcu.Pin44=PB6
+Mcu.Pin45=PB7
+Mcu.Pin46=VP_SYS_VS_Systick
+Mcu.Pin47=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin5=PF0-OSC_IN
 Mcu.Pin6=PF1-OSC_OUT
-Mcu.Pin7=PA0
-Mcu.Pin8=PA5
-Mcu.Pin9=PA6
-Mcu.PinsNb=44
+Mcu.Pin7=PC3
+Mcu.Pin8=PA0
+Mcu.Pin9=PA2
+Mcu.PinsNb=48
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F303VCTx
@@ -90,6 +95,7 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_2
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true
 NVIC.TIM2_IRQn=true\:1\:0\:true\:false\:true\:true\:true
+NVIC.USART2_IRQn=true\:1\:0\:true\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 PA0.GPIOParameters=GPIO_Label
 PA0.GPIO_Label=B1 [Blue PushButton]
@@ -115,6 +121,10 @@ PA14.GPIO_Label=SWCLK
 PA14.Locked=true
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA2.Mode=Asynchronous
+PA2.Signal=USART2_TX
+PA3.Mode=Asynchronous
+PA3.Signal=USART2_RX
 PA5.GPIOParameters=GPIO_Label
 PA5.GPIO_Label=SPI1_SCK [L3GD20_SCL/SPC]
 PA5.Locked=true
@@ -154,6 +164,8 @@ PB3.GPIOParameters=GPIO_PuPd
 PB3.GPIO_PuPd=GPIO_PULLDOWN
 PB3.Locked=true
 PB3.Signal=GPXTI3
+PB5.Locked=true
+PB5.Signal=GPIO_Output
 PB6.GPIOParameters=GPIO_Label
 PB6.GPIO_Label=I2C1_SCL [LSM303DLHC_SCL]
 PB6.Locked=true
@@ -172,6 +184,8 @@ PC15-OSC32_OUT.GPIOParameters=GPIO_Label
 PC15-OSC32_OUT.GPIO_Label=OSC32_OUT
 PC15-OSC32_OUT.Locked=true
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
+PC3.Locked=true
+PC3.Signal=GPIO_Input
 PC4.Mode=IN5-Single-Ended
 PC4.Signal=ADC2_IN5
 PD10.Locked=true
@@ -273,7 +287,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_USB_PCD_Init-USB-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_ADC2_Init-ADC2-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_USB_PCD_Init-USB-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_ADC2_Init-ADC2-false-HAL-true,8-MX_USART2_UART_Init-USART2-false-HAL-true
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
 RCC.AHBFreq_Value=72000000
@@ -339,6 +353,9 @@ SPI1.VirtualType=VM_MASTER
 TIM2.IPParameters=Prescaler,Period
 TIM2.Period=100
 TIM2.Prescaler=959
+USART2.BaudRate=9600
+USART2.IPParameters=VirtualMode-Asynchronous,BaudRate
+USART2.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
